human-intervention-logs/io.fabric8:kubernetes-model-apps:7.7.0/gradle-test/gradle-test-2026-06-06T10-57-30-368648Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.fabric8:kubernetes-model-apps:7.7.0
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:178: error: cannot find symbol
                .withNewMetadata("continue-token", 2L, "17", null)
                ^
  symbol:   method withNewMetadata(String,long,String,<null>)
  location: class DeploymentListBuilder
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:271: error: cannot find symbol
                .withNewMetadata(null, 2L, "21", null)
                ^
  symbol:   method withNewMetadata(<null>,long,String,<null>)
  location: class ReplicaSetListBuilder
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:374: error: cannot find symbol
                .withNewMetadata(null, 2L, "31", null)
                ^
  symbol:   method withNewMetadata(<null>,long,String,<null>)
  location: class DaemonSetListBuilder
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:496: error: cannot find symbol
                .withNewMetadata("next", 2L, "41", null)
                ^
  symbol:   method withNewMetadata(String,long,String,<null>)
  location: class StatefulSetListBuilder

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/build/reports/problems/problems-report.html
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:538: error: cannot find symbol
                .withNewMetadata(null, 2L, "51", null)
                ^
  symbol:   method withNewMetadata(<null>,long,String,<null>)
  location: class ControllerRevisionListBuilder
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:178: error: cannot find symbol
                  .withNewMetadata("continue-token", 2L, "17", null)
                  ^
    symbol:   method withNewMetadata(String,long,String,<null>)
    location: class DeploymentListBuilder
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:271: error: cannot find symbol
                  .withNewMetadata(null, 2L, "21", null)
                  ^
    symbol:   method withNewMetadata(<null>,long,String,<null>)
    location: class ReplicaSetListBuilder
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:374: error: cannot find symbol
                  .withNewMetadata(null, 2L, "31", null)
                  ^
    symbol:   method withNewMetadata(<null>,long,String,<null>)
    location: class DaemonSetListBuilder
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:496: error: cannot find symbol
                  .withNewMetadata("next", 2L, "41", null)
                  ^
    symbol:   method withNewMetadata(String,long,String,<null>)
    location: class StatefulSetListBuilder
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/tests/src/io.fabric8/kubernetes-model-apps/7.7.0/src/test/java/io_fabric8/kubernetes_model_apps/Kubernetes_model_appsTest.java:538: error: cannot find symbol
                  .withNewMetadata(null, 2L, "51", null)
                  ^
    symbol:   method withNewMetadata(<null>,long,String,<null>)
    location: class ControllerRevisionListBuilder
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7958-7d72267b/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.fabric8:kubernetes-model-apps:7.7.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
9 actionable tasks: 1 executed, 8 up-to-date
